Section-8/Web-Food/styles.css
body {
  font-family: "Quicksand", sans-serif;
  margin: 0;
  color: orange;
}
ul {
  list-style: none;
  padding: 0;
  margin: 0px;
}

a {
  text-decoration: none;
  color: orange;
}

header {
  justify-content: space-between;
  width: 100%;
  background-color: #000;
  margin: auto;
}

#site-logo {
  font-size: 1.3rem;
  padding: 0 2rem;
}

nav ul {
  width: auto;
  margin: auto;
  justify-content: space-between;
}

nav li {
  padding: 0 0.7rem;
  font-size: 1rem;
}
.flex {
  display: flex;
}
main h1 {
  text-align: center;
  font-size: 2rem;
  margin: 1rem 1rem;
}
body {
  background-color: rgb(26, 25, 25);
}

main ul {
  display: grid;
  grid-template-columns: auto auto;
  width: 80%;
  margin: auto;
  justify-content: center;
}

.item-content {
  background-color: pink;
  border-radius: 10px;
  overflow: hidden;
  text-align: center;
  margin: .8rem 1.4rem;
  width: 90%;
  height: 100%;  
}

.item-content img {
  width: 100%;
  height: 60%;
  object-fit: cover;
}

.item-content h3 {
  color: rgb(36, 35, 35);
  font-size: 1.7rem;
  margin: 1rem 0.6rem;
}


.item-content a {
  display: inline-block;
  padding: 0.8rem;
  background: linear-gradient(45deg, orange, rgb(207, 0, 0));
  border-radius: 10px;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
  /* margin-bottom: 0.8rem; */
  color: white;
}

.item-content a:hover {
  background: linear-gradient(45deg, rgb(209, 136, 1), rgb(182, 0, 0));
}

@media (max-width: 768px) {
  main ul {
    grid-template-columns: auto;
  }

  .item-content{
    width: 90%;
    height: 20rem;
  }
}
@media (min-width: 1000px) {
  main ul {
    width: 70%;
  }
}

